--- a/style-login.css
+++ b/style-login.css
@@ -15,12 +15,11 @@ body {
 
 .left-side {
     width: 50vw;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
 }
 
 .left-side-image {
@@ -29,20 +28,20 @@ body {
 }
 
 .left-side > h1, p {
-    font-size: 2vw;
     color: #E94560;
+    font-size: 2vw;
 }
 
 .right-side {
     width: 50vw;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .login-card {
-    width: 50%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -97,3 +96,29 @@ body {
     box-shadow: 0px 10px 40px -10px #e9456089;
 }
 
+@media only screen and (max-width: 950px){
+    .login-card{
+        width: 85%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .main-page{
+        flex-direction: column;
+    }
+    .left-side{
+        width: 80vw;
+        height: 50vh;
+    }
+    .left-side > h1, p{
+        font-size: 4vw;
+    }
+    .left-side-image{
+        width: 40vw;
+    }
+    .right-side{
+        width: 80vw;
+        height: auto;
+    }
+    
+}
