--- a/style-login.css
+++ b/style-login.css
@@ -102,7 +102,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (hover: none) and (pointer: coarse){
     .main-page{
         flex-direction: column;
     }
