--- a/style-login.css
+++ b/style-login.css
@@ -96,6 +96,8 @@ body {
     box-shadow: 0px 10px 40px -10px #e9456089;
 }
 
+.btn-login:active {background: #1f1f1f; color: #E94560; box-shadow: none;}
+
 @media only screen and (max-width: 950px){
     .login-card{
         width: 85%;
